Change contract logic.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,9 @@
 <script>
 	window.addEventListener('load', function () {
 
+		const contractAddress = '';
+		const contractAbi = '';
+
 		var web3 = {};
 		//if (typeof window.web3 !== "undefined" && typeof window.web3.currentProvider !== "undefined") {
 		//	web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/ri45PYMaMiRFCfZh2H5a"));
