--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,34 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+	text-decoration: none;
+}
+
+button a {
+	text-decoration: none !important;
+	color: inherit !important;
+}
+
+.hide-me {
+	display: none;
+}
+
+.msg {
+	font-size: 2.5rem;
+	padding: 1rem;
+	text-align: center;
+	cursor: pointer;
+}
+
+.error-msg {
+	color: white;
+	background-color: red;
+}
+
+.success-msg {
+	color: white;
+	background-color: rgba(68, 255, 51, 0.493);
 }
