Implement all products.

--- a/views/partials/sellerRegister.hbs
+++ b/views/partials/sellerRegister.hbs
@@ -16,7 +16,7 @@
         <div class="form-label"><label for="userAddress" class="form">Enter your address</label></div>
         <input class="form-control" id="userAddress" type="text">
         <br>
-        <button id="btn-buyer-register" type="button" class="btn btn-default">Register</button>
+        <button id="btn-seller-register" type="button" class="btn btn-default">Register</button>
     </div>
 
 </div>
