--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,17 @@
 		<div class="col-xs-2">
 			<nav>
 				<div class="row">
+
 					<div class="col-xs-12">
+						<br>
+						<button type="button" class="btn btn-info">
+							<a href="/">Products</a>
+						</button>
+						
+					</div>
+
+					<div class="col-xs-12">
+						<br>
 						<button type="button" class="btn btn-info">
 							<a href="/buyer/register">Register as Buyer</a>
 						</button>
@@ -37,7 +47,7 @@
 					<div class="col-xs-12">
 						<br>
 						<button type="button" class="btn btn-info">
-							<a href="/buyer/register">......</a>
+							<a href="/seller/addProduct">Add Product</a>
 						</button>
 						
 					</div>
@@ -68,258 +78,291 @@
 	const contractAddress = '0xf25186b5081ff5ce73482ad761db0eb0d25abfbf';
 	const creator = '0x627306090abab3a6e1400e9345bc60c78a8bef57';
 
+	const shouldGetProducts = '{{shouldGetProducts}}';
+
+	//const creator = '{{contractCreator}}';
+	//const contractAddress = '{{contractAddress}}';
+
+	let contractAbi = [
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getBalanceOfSeller",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getBalance",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getFee",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": true,
+		"inputs": [
+			{
+				"name": "productName",
+				"type": "string"
+			}
+		],
+		"name": "getProductPriceInFinney",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": true,
+		"inputs": [
+			{
+				"name": "index",
+				"type": "uint256"
+			}
+		],
+		"name": "getProduct",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			},
+			{
+				"name": "",
+				"type": "string"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"constant": true,
+		"inputs": [],
+		"name": "getNumberOfProducts",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{
+				"indexed": false,
+				"name": "addr",
+				"type": "address"
+			},
+			{
+				"indexed": false,
+				"name": "currentTime",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"name": "price",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"name": "productName",
+				"type": "string"
+			}
+		],
+		"name": "BuyProduct",
+		"type": "event"
+	},
+	{
+		"constant": false,
+		"inputs": [],
+		"name": "sellerWithdraw",
+		"outputs": [],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{
+				"indexed": false,
+				"name": "addr",
+				"type": "address"
+			},
+			{
+				"indexed": false,
+				"name": "_registerTax",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"name": "currentTime",
+				"type": "uint256"
+			}
+		],
+		"name": "RegisterEvent",
+		"type": "event"
+	},
+	{
+		"constant": false,
+		"inputs": [
+			{
+				"name": "price",
+				"type": "uint256"
+			},
+			{
+				"name": "productName",
+				"type": "string"
+			},
+			{
+				"name": "doc",
+				"type": "string"
+			},
+			{
+				"name": "ipfsPath",
+				"type": "string"
+			}
+		],
+		"name": "addProduct",
+		"outputs": [
+			{
+				"name": "",
+				"type": "bool"
+			}
+		],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"constant": false,
+		"inputs": [
+			{
+				"name": "productName",
+				"type": "string"
+			}
+		],
+		"name": "buyProduct",
+		"outputs": [
+			{
+				"name": "",
+				"type": "uint256"
+			},
+			{
+				"name": "",
+				"type": "string"
+			},
+			{
+				"name": "",
+				"type": "string"
+			},
+			{
+				"name": "",
+				"type": "string"
+			}
+		],
+		"payable": true,
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"name": "_registerTax",
+				"type": "uint256"
+			},
+			{
+				"name": "_fee",
+				"type": "uint256"
+			}
+		],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "constructor"
+	},
+	{
+		"payable": true,
+		"stateMutability": "payable",
+		"type": "fallback"
+	},
+	{
+		"constant": false,
+		"inputs": [],
+		"name": "registerAsBuyer",
+		"outputs": [],
+		"payable": true,
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
+		"constant": false,
+		"inputs": [],
+		"name": "registerAsSeller",
+		"outputs": [],
+		"payable": true,
+		"stateMutability": "payable",
+		"type": "function"
+	},
+	{
+		"constant": false,
+		"inputs": [],
+		"name": "ownerWithdraw",
+		"outputs": [],
+		"payable": false,
+		"stateMutability": "nonpayable",
+		"type": "function"
+	}
+]
+
+	
 	//let web3 = {};
 	window.addEventListener('load', function () {
 
-		const contractAbi = [{
-				"constant": true,
-				"inputs": [],
-				"name": "getBalanceOfSeller",
-				"outputs": [{
-					"name": "",
-					"type": "uint256"
-				}],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"constant": true,
-				"inputs": [],
-				"name": "getBalance",
-				"outputs": [{
-					"name": "",
-					"type": "uint256"
-				}],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"constant": true,
-				"inputs": [],
-				"name": "getFee",
-				"outputs": [{
-					"name": "",
-					"type": "uint256"
-				}],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"constant": true,
-				"inputs": [{
-					"name": "productName",
-					"type": "string"
-				}],
-				"name": "getProductPriceInFinney",
-				"outputs": [{
-					"name": "",
-					"type": "uint256"
-				}],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"constant": true,
-				"inputs": [{
-					"name": "index",
-					"type": "uint256"
-				}],
-				"name": "getProduct",
-				"outputs": [{
-						"name": "",
-						"type": "uint256"
-					},
-					{
-						"name": "",
-						"type": "string"
-					}
-				],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"constant": true,
-				"inputs": [],
-				"name": "getNumberOfProducts",
-				"outputs": [{
-					"name": "",
-					"type": "uint256"
-				}],
-				"payable": false,
-				"stateMutability": "view",
-				"type": "function"
-			},
-			{
-				"anonymous": false,
-				"inputs": [{
-						"indexed": false,
-						"name": "addr",
-						"type": "address"
-					},
-					{
-						"indexed": false,
-						"name": "currentTime",
-						"type": "uint256"
-					},
-					{
-						"indexed": false,
-						"name": "price",
-						"type": "uint256"
-					},
-					{
-						"indexed": false,
-						"name": "productName",
-						"type": "string"
-					}
-				],
-				"name": "BuyProduct",
-				"type": "event"
-			},
-			{
-				"constant": false,
-				"inputs": [],
-				"name": "sellerWithdraw",
-				"outputs": [],
-				"payable": false,
-				"stateMutability": "nonpayable",
-				"type": "function"
-			},
-			{
-				"anonymous": false,
-				"inputs": [{
-						"indexed": false,
-						"name": "addr",
-						"type": "address"
-					},
-					{
-						"indexed": false,
-						"name": "_registerTax",
-						"type": "uint256"
-					},
-					{
-						"indexed": false,
-						"name": "currentTime",
-						"type": "uint256"
-					}
-				],
-				"name": "RegisterEvent",
-				"type": "event"
-			},
-			{
-				"constant": false,
-				"inputs": [{
-						"name": "price",
-						"type": "uint256"
-					},
-					{
-						"name": "productName",
-						"type": "string"
-					},
-					{
-						"name": "doc",
-						"type": "string"
-					},
-					{
-						"name": "ipfsPath",
-						"type": "string"
-					}
-				],
-				"name": "addProduct",
-				"outputs": [{
-					"name": "",
-					"type": "bool"
-				}],
-				"payable": false,
-				"stateMutability": "nonpayable",
-				"type": "function"
-			},
-			{
-				"constant": false,
-				"inputs": [{
-					"name": "productName",
-					"type": "string"
-				}],
-				"name": "buyProduct",
-				"outputs": [{
-						"name": "",
-						"type": "uint256"
-					},
-					{
-						"name": "",
-						"type": "string"
-					},
-					{
-						"name": "",
-						"type": "string"
-					},
-					{
-						"name": "",
-						"type": "string"
-					}
-				],
-				"payable": true,
-				"stateMutability": "payable",
-				"type": "function"
-			},
-			{
-				"inputs": [{
-						"name": "_registerTax",
-						"type": "uint256"
-					},
-					{
-						"name": "_fee",
-						"type": "uint256"
-					}
-				],
-				"payable": false,
-				"stateMutability": "nonpayable",
-				"type": "constructor"
-			},
-			{
-				"payable": true,
-				"stateMutability": "payable",
-				"type": "fallback"
-			},
-			{
-				"constant": false,
-				"inputs": [],
-				"name": "registerAsBuyer",
-				"outputs": [],
-				"payable": true,
-				"stateMutability": "payable",
-				"type": "function"
-			},
-			{
-				"constant": false,
-				"inputs": [],
-				"name": "registerAsSeller",
-				"outputs": [],
-				"payable": true,
-				"stateMutability": "payable",
-				"type": "function"
-			},
-			{
-				"constant": false,
-				"inputs": [],
-				"name": "ownerWithdraw",
-				"outputs": [],
-				"payable": false,
-				"stateMutability": "nonpayable",
-				"type": "function"
-			}
-		];
+		
 
-		//var web3 = {};
-		//if (typeof window.web3 !== "undefined" && typeof window.web3.currentProvider !== "undefined") {
-		//	web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/ri45PYMaMiRFCfZh2H5a"));
-		//} else {
-		//	web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/ri45PYMaMiRFCfZh2H5a"));
-		//}
+			//var web3 = {};
+			//if (typeof window.web3 !== "undefined" && typeof window.web3.currentProvider !== "undefined") {
+			//	web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/ri45PYMaMiRFCfZh2H5a"));
+			//} else {
+			//	web3 = new Web3(new Web3.providers.HttpProvider("https://ropsten.infura.io/ri45PYMaMiRFCfZh2H5a"));
+			//}
 		if (typeof web3 !== 'undefined') {
 			//console.log(web3.currentProvider);
 			//App.web3Provider = web3.currentProvider;
@@ -332,25 +375,21 @@
 			web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:7545"));
 		}
 
+		//console.log(8880)
+		//console.log(BigNumber);
+
 		//web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:7545"));
 		contract = web3.eth.contract(contractAbi).at(contractAddress);
 
+		// ******************   Buyer *****************
 		$('#btn-buyer-register').click(buyerRegister);
-
 		function buyerRegister(){
 			let userAddress = $('#userAddress').val();
 
-			if(userAddress.indexOf('0x') !== 0){
-				showErrorMsg('Invalid address!');
+			if(!isAddressValid(userAddress)){
 				return;
 			}
 
-			if(userAddress.length !== 42){
-				showErrorMsg('Invalid address length!');
-				return;
-			}
-
-			//register as buyer
 			let options = {
 				from: userAddress, 
 				value: '1000000000000000000', 
@@ -362,16 +401,219 @@
 					showErrorMsg(err);
 					return;
 				}
-
-				console.log(result); // tx hash
-				let msg = `Successfully register! Transaction hash: ${result}`;
+				
+				// tx hash
+				let msg = `Successfully register like Buyer! Transaction hash: ${result}`;
 				showSuccessMsg(msg);
-				});
+			});
+		};
+
+		// ******************   Seller  *****************
+		$('#btn-seller-register').click(sellerRegister);	
+		function sellerRegister(){
+
+			let userAddress = $('#userAddress').val();
+
+			if(!isAddressValid(userAddress)){
+				return;
+			}
+			
+			let option = { 
+				from: userAddress, 
+				value: '1000000000000000000', 
+				gas: 1000000
 			};
 
-		
-		
+			contract.registerAsSeller(option, function(err,result) {
+				if(err){
+					showErrorMsg(err);
+					return;
+				}
+				
+				// tx hash
+				let msg = `Successfully register like Seller! Transaction hash: ${result}`;
+				showSuccessMsg(msg);
+			});
+		}
+
+		$('#btn-seller-add').click(sellerAddProduct);
+		function sellerAddProduct() {
+			let userAddress = $('#userAddress').val();
+
+			if(!isAddressValid(userAddress)){
+				return;
+			}
+
+			let productName = $('#productName').val();
+			let productPrice = $('#productPrice').val();
+			let ipfsPath = ' ';
+
+			if(productName.length < 3 || productName.length > 50 ||
+				productName === '' || productName === 'undefined') {
+				showErrorMsg('Invalid product name!');
+				return;
+			}
+
+			if(!isValidPrice) {
+				showErrorMsg('Invalid price!');
+				return;
+			}
+
+			productPrice = toFinney(parseFloat(productPrice));
+			console.log(productPrice);
+			
+			let option = { 
+				from: userAddress,
+				gas: 1000000
+			};
+
+			contract.addProduct(productPrice, productName, ' ', ipfsPath, option, function(err,result){
+				if(err){
+					showErrorMsg(err);
+					return;
+				}
+				
+				// tx hash
+				let msg = `Successfully add a product! Transaction hash: ${result}`;
+				showSuccessMsg(msg);
+			}); 
+		}
+
+		if(shouldGetProducts){
+
+			console.log(' get prod');
+			getProducts();
+			function getProducts(){
+
+				let option = { 
+				from: creator,
+				gas: 1000000
+				};
+
+				contract.getNumberOfProducts( option, function(err,result){
+				if(err){
+					showErrorMsg(err);
+					return;
+				}
+				
+				let numberOfProducts = JSON.parse(result);
+				
+
+				for(let i = 0; i < numberOfProducts; i++) {
+					contract.getProduct(i, option, function(e,r){
+						if(e){
+							showErrorMsg(r);
+							return;
+						}
+
+						let name = r[1];
+						let price = web3.fromWei(JSON.parse(r[0]), 'ether');
+
+						addProductToView({name, price, link: 'shgereorihgdkfvn'});
+					});
+				}
+			}); 
+			}
+		}
+
 		//utis
+
+		// add product to view
+		function addProductToView(product){
+			let productView = ` <div class="col-xs-4">
+    <br>
+    <br>
+
+    <fieldset style="margin:5px; padding:10px; border:1px solid gray; border-radius: 5px;">
+        <div class="col-xs-12">
+            Name:
+            <b>${product.name}</b>
+        </div>
+
+        <div class="col-xs-12">
+            Price:
+            <b>${product.price}</b> ether
+        </div>
+
+        <div class="col-xs-12">
+            Link to IPFS:
+            <a class="btn btn-sm btn-default" href="https://ipfs.io/ipfs/${product.link}">Click</a>
+        </div>
+
+        <div class="col-xs-12">
+            <br>
+            <button class="btn btn-primary" type="button" data-productname="${product.name}">Purchase</button>
+        </div>
+    </fieldset>
+</div>
+
+
+</div>`;
+			
+			$('#product-wrapper').append(productView);
+		}
+
+		// address validator
+		function isAddressValid(address){
+
+			if(address.indexOf('0x') !== 0){
+				showErrorMsg('Invalid address!');
+				return false;
+			}
+
+			if(address.length !== 42){
+				showErrorMsg('Invalid address length!');
+				return false;;
+			}
+
+			return true;
+		}
+
+		function isValidPrice(price) {
+
+			if(isNaN(price)){
+				return false;
+			}
+
+			if(price === '' || price === 'undefined'){
+				return false;
+			}
+
+			let number = parseFloat(price);
+
+			if(number < 0){
+				return false;
+			}
+
+			return number;
+		}
+
+		function toFinney(number) {
+
+			let length = number.toString().length;
+			let indexOfDecimal = number.toString().indexOf('.');
+
+			let weiLength = 18;
+			
+			if(indexOfDecimal < 1){
+				return number + '0'.repeat(weiLength);
+			}
+
+			let exponent = length - indexOfDecimal - 1;
+
+			if(indexOfDecimal < 1){
+				multiplier = 1;
+			}
+
+			let newNum = number.toString().replace('.', '');
+
+			let wei = '0'.repeat(weiLength - exponent);
+			let asWei = newNum + wei;
+
+			return asWei;
+		}
+
+		// messages
 		$('.msg').click(onMsgClick);
 		function onMsgClick(){
 			$(this).hide();
