--- a/views/partials/list.hbs
+++ b/views/partials/list.hbs
@@ -1,7 +1,18 @@
 <div class="row">
     <div class="col-xs-12 text-center">
-        <h1><b>Available Products</b></h1>
+        <h1>
+            <b>Available Products</b>
+        </h1>
         <br>
+    </div>
+
+    <br>
+
+    <div class="col-xs-12 ">
+        <div class="col-xs-4  col-xs-offset-1">
+        <label for="userAddress" class="form">Enter your address</label>
+        <input class="form-control" id="userAddress" type="text">
+    </div>
     </div>
 
     <br>
