Project structure refactoring. Implement some unit tests.

--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -23,6 +23,12 @@ button a {
 	cursor: pointer;
 }
 
+.info-msg {
+	color: orange;
+	background-color: black;
+
+}
+
 .error-msg {
 	color: white;
 	background-color: red;
